# PolyH

./: CMakeLists.txt  README.md
test/polyh/: CMakeLists.txt
test/polyh/crtp_macro/: crtp_friend.cpp  crtp_underlying.cpp  crtp_variadic_friend.cpp
test/polyh/virtual_base/: diamond_problem.cpp  inheritance.cpp  multilevel_inheritance.cpp
